--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --config nodemon.json src/app.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/config": "0.0.41",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "@types/pino": "^7.0.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "config": "^3.3.7",
+    "dayjs": "^1.11.3",
     "express": "^4.18.1",
     "mongoose": "^6.4.0",
     "nanoid": "3.1.23",
     "nodemon": "^2.0.16",
+    "pino": "^8.0.0",
+    "pino-pretty": "^8.0.0",
     "socket.io": "^4.5.1"
   }
 }
