--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.1",
     "@types/body-parser": "^1.19.0",
-    "@types/cors": "^2.8.10",
     "@types/config": "0.0.41",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.168",
@@ -36,6 +36,7 @@
     "nodemon": "^2.0.16",
     "pino": "^8.0.0",
     "pino-pretty": "^8.0.0",
+    "readline-sync": "^1.4.10",
     "socket.io": "^4.5.1",
     "yup": "^0.32.9"
   }
