--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "gladiatorplane",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon --config nodemon.json src/app.ts"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/bcrypt": "^3.0.1",
-    "@types/body-parser": "^1.19.0",
-    "@types/config": "0.0.41",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.1",
-    "@types/lodash": "^4.14.168",
-    "@types/mongoose": "^5.10.5",
-    "@types/nanoid": "^2.1.0",
-    "@types/node": "^18.0.0",
-    "@types/pino": "^7.0.5",
-    "@types/yup": "^0.29.11",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "config": "^3.3.7",
-    "dayjs": "^1.11.3",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
-    "mongoose": "^5.12.7",
-    "nanoid": "3.1.23",
-    "nodemon": "^2.0.16",
-    "pino": "^8.0.0",
-    "pino-pretty": "^8.0.0",
-    "readline-sync": "^1.4.10",
-    "socket.io": "^4.5.1",
-    "yup": "^0.32.9"
-  }
+    "name": "gladiatorplane",
+    "version": "0.0.1",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon --config nodemon.json src/app.ts"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/bcrypt": "^3.0.1",
+        "@types/body-parser": "^1.19.0",
+        "@types/config": "0.0.41",
+        "@types/cors": "^2.8.10",
+        "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.1",
+        "@types/lodash": "^4.14.168",
+        "@types/mongoose": "^5.10.5",
+        "@types/nanoid": "^2.1.0",
+        "@types/node": "^18.0.0",
+        "@types/pino": "^7.0.5",
+        "@types/yup": "^0.29.11",
+        "ts-node": "^10.8.1",
+        "typescript": "^4.7.4"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "config": "^3.3.7",
+        "dayjs": "^1.11.3",
+        "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.21",
+        "mongoose": "^5.12.7",
+        "nanoid": "3.1.23",
+        "nodemon": "^2.0.16",
+        "pino": "^8.0.0",
+        "pino-pretty": "^8.0.0",
+        "rayleigh": "^0.0.5",
+        "readline-sync": "^1.4.10",
+        "socket.io": "^4.5.1",
+        "yup": "^0.32.9"
+    }
 }
